Update the bundler